# MultiGPU4CL

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  run_100w.sh  run_10w.sh  run_exp.sh  test.sh
.trae/documents/: multi_gpu_adaptation_plan.md
data/: Brightkite_edges.e  CA-CondMat.e  DBLP_queries.txt  Email-Enron.e  as-caida20071105.e  as-caida20071105_queries.txt  as-skitter_queries.txt  com-youtube_queries.txt  git_web_ml.e  p2p-Gnutella31.e  p2p-Gnutella31_queries.txt  soc-lastfm_queries.txt  web-Google_queries.txt  wiki-talk_queries.txt
include/: record  record_right
include/HBPLL/: gpu_clean.cuh  hop_constrained_two_hop_labels.h  hop_constrained_two_hop_labels_generation.h  test.h
include/checker/: checker.cuh
include/core/: flush_cache.hpp  gpu_warmup.cuh  types.h
include/cpu_label_gen/: cpu_label_gen.hpp  cpu_label_manager.hpp
include/definition/: cuda_err.cuh
include/gpu_label_gen/: gen_timing.hpp  gpu_label_clean.cuh  gpu_label_gen.cuh  gpu_label_manager.cuh
include/graph/: csr_graph.hpp  graph_v_of_v.hpp  graph_v_of_v_generate_random_graph.hpp  graph_v_of_v_hop_constrained_shortest_distance.hpp  graph_v_of_v_hop_constrained_shortest_path.hpp  graph_v_of_v_update_vertexIDs_by_degrees_large_to_small.hpp  ldbc.hpp  ldbc_graph.hpp
include/graph_v_of_v/: graph_v_of_v.h  graph_v_of_v_shortest_paths.h  (+3 more)
src/: gpu_label_clean.cu  gpu_label_gen.cu  label_clean.cu  label_clean_hash.cu  label_clean_v2.cu  label_clean_v3.cu  label_clean_v4.cu  label_gen.cu  label_gen_csr.cu  label_gen_hash.cu  label_gen_v2.cu  label_gen_v3.cu  main.cu  test.cu
(+25 files in other folders)
